Did changes for CORS issue and api integration with backend

--- a/src/app/features/url-shortener/url-shortener.component.html
+++ b/src/app/features/url-shortener/url-shortener.component.html
@@ -19,6 +19,6 @@
             </div>
         </div>
         <div *ngIf="shortUrl">Short Url Created:</div>
-        <a *ngIf="shortUrl" target="_blank" [href]="shortUrl">{{shortUrl}}</a>
+        <a *ngIf="shortUrl" target="_blank" [href]="shortUrl"><span>http://localhost:4200/</span>{{shortUrl}}</a>
     </form>
 </div>
